--- a/espumas/templates/espumas/medidas/agregarmedidas.html
+++ b/espumas/templates/espumas/medidas/agregarmedidas.html
@@ -5,7 +5,9 @@
 
 <br>
 <br>
-<div class="container"></div>
+<div class="container">
+    
+</div>
     <form method="POST">
         {% csrf_token %}
         <div class="row">
