--- a/espumas/templates/index.html
+++ b/espumas/templates/index.html
@@ -44,8 +44,8 @@
 							<div class="row">
 										<div class="col-md-4">
 											<h2>Ver Ordenes </h2>
-											<p> Aqui se revisan TODAS las ordenes. </p>
-											<p><a class="btn btn-primary" href="{% url 'corrida:orden_de_corrida' %}" role="button">Ordenes Pendientes &raquo;</a></p>
+											<p> Ver las ordenes. </p>
+											<p><a class="btn btn-primary" href="{% url 'corrida:ordenes' %}" role="button">Ordenes Pendientes &raquo;</a></p>
 										</div>
 										<div class="col-md-4">
 											<h2>Ordenes Pendientes</h2>
@@ -53,9 +53,10 @@
 											<p><a class="btn btn-primary" href="{% url 'corrida:ordenes_pendientes' %}" role="button"> Ver Ordenes Pendientes &raquo;</a></p>
 										</div>
 										<div class="col-md-4">
-											<h2>Reportes/Buscador</h2>
-											<p>Para ver inventario, generar reportes o buscar una pieza entre aquí.</p>
-											<p><a class="btn btn-primary" href="#" role="button"> Ver Inventario &raquo;</a></p>
+											<h2>Ordenes Producidas</h2>
+											
+											<p>Para ver las ordenes producidas entre aquí.</p>
+											<p><a class="btn btn-primary" href="{% url 'corrida:corridas_producidas' %}" role="button"> Ver Inventario &raquo;</a></p>
 										</div>
 									</div>
 
@@ -63,9 +64,9 @@
 
 									<div class="row">
 												<div class="col-md-4">
-													<h2> Producción de Cilindros de espuma </h2>
-													<p> Para capturar los cilindros de espuma entra aquí.</p>
-													<p><a class="btn btn-primary" href="#" role="button">Capturar Cilindros  &raquo;</a></p>
+													<h2> Inventario </h2>
+													<p> Para ver inventario, generar reportes o buscar una pieza entre aquí.</p>
+													<p><a class="btn btn-primary" href="{% url 'corrida:inventario' %}" role="button">Capturar Cilindros  &raquo;</a></p>
 												</div>
 												<div class="col-md-4">
 													<h2>Producción de Bloque de espuma</h2>
