highlight row, reordered action buttons,added dash

--- a/corrida/templates/ordenes/ordenes_pendientes.html
+++ b/corrida/templates/ordenes/ordenes_pendientes.html
@@ -30,7 +30,7 @@
 
             <tr>
                 <td>{{ elementoCorrida.corrida }}</td>
-                <td>{{ elementoCorrida.bloqueMedidas }}</td>
+                <td>{{ elementoCorrida.bloqueMedidas.tipo_de_espuma }}</td>
                 <td>{{ elementoCorrida.bloqueMedidas.descripcion }}</td>
                 <td>{{ elementoCorrida.bloqueMedidas.tipo_de_unidad }}</td>
                 <td>{{ elementoCorrida.bloqueMedidas.forma }}</td>
