Added resumen to corrida_producida

--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -5,7 +5,42 @@
 
 Resumen de Orden </h2></b> 
 
-
+<table>
+  <tbody>
+    <tr>
+      <td>Bloques Normales</td>
+      <td>{{resumen.bloques_normales}}</td>
+    </tr>
+    <tr>
+      <td>Bloques OK</td>
+      <td>{{resumen.bloques_ok}}</td>
+    </tr>
+    <tr>
+      <td>Bloque NG</td>
+      <td>{{resumen.bloques_ng}}</td>
+    </tr>
+    <tr>
+      <td>Bloques Cambio</td>
+      <td>{{resumen.bloques_cambio}}</td>
+    </tr>
+    <tr>
+      <td>Densidad Promedio</td>
+      <td>{{resumen.densidad_promedio}}</td>
+    </tr>
+    <tr>
+      <td>Metros Planeados</td>
+      <td>{{resumen.metros_planeados}}</td>
+    </tr>
+    <tr>
+      <td>Metros Producidos</td>
+      <td>{{resumen.metros_producidos}}</td>
+    </tr>
+    <tr>
+      <td>Peso Producido</td>
+      <td>{{resumen.peso_producido}}</td>
+    </tr>
+  </tbody>
+</table>
 
 <p>  
      
