added tble for counters, dashboard update

--- a/corrida/templates/ordenes/dashboard_en_producion.html
+++ b/corrida/templates/ordenes/dashboard_en_producion.html
@@ -45,7 +45,7 @@
                         <td>{{ elementoCorrida.bloqueMedidas.descripcion }}</td>
                         <td>{{ elementoCorrida.bloqueMedidas.tipo_de_unidad }}</td>
                     
-                        <td>0/{{ elementoCorrida.cantidad }}</td>
+                        <td>{{elementoCorrida.num_bloques}}{{ elementoCorrida.cantidad }}</td>
                     
                     </tr>
                 
