--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -38,7 +38,7 @@
                         {%else%}
                         <td><span class="badge badge-primary badge-pill">{{elemento.bloqueMedidas.tipo_de_unidad}}</span></td>
                         {%endif%}
-                        <td class="text-center"> <b> {{elemento.cantidad}} </b></td>
+                        <td class="text-center"> <b> {{elemento.num_bloques}}/{{elemento.cantidad}} </b></td>
 <!--                        
                         <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> 
                         </td> -->
@@ -52,7 +52,7 @@
                         {%else%}
                         <td><span class="badge badge-primary badge-pill">{{elemento.bloqueMedidas.tipo_de_unidad}}</span></td>
                         {%endif%}
-                        <td class="text-center"> <b> {{elemento.cantidad}} </b></td>
+                        <td class="text-center"> <b> {{elemento.num_bloques}}/{{elemento.cantidad}} </b></td>
 <!--                        
                         <td><a class="btn btn-primary" href="{% url 'corrida:producir_bloques' elemento.corrida_id  elemento.id %}" role="button"> Selecionar </a> 
                         </td> -->
