--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -1,89 +1,71 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h2> <b>
+<h2 class="text-primary" > <b>
 
 Resumen de Orden </h2></b> 
 
-<table>
-  <tbody>
-    <tr>
-      <td>Bloques Normales</td>
-      <td>{{resumen.bloques_normales}}</td>
-    </tr>
-    <tr>
-      <td>Bloques OK</td>
-      <td>{{resumen.bloques_ok}}</td>
-    </tr>
-    <tr>
-      <td>Bloque NG</td>
-      <td>{{resumen.bloques_ng}}</td>
-    </tr>
-    <tr>
-      <td>Bloques Cambio</td>
-      <td>{{resumen.bloques_cambio}}</td>
-    </tr>
-    <tr>
-      <td>Densidad Promedio</td>
-      <td>{{resumen.densidad_promedio}}</td>
-    </tr>
-    <tr>
-      <td>Metros Planeados</td>
-      <td>{{resumen.metros_planeados}}</td>
-    </tr>
-    <tr>
-      <td>Metros Producidos</td>
-      <td>{{resumen.metros_producidos}}</td>
-    </tr>
-    <tr>
-      <td>Peso Producido</td>
-      <td>{{resumen.peso_producido}}</td>
-    </tr>
-  </tbody>
-</table>
-
-<p>  
-     
-</p>
 <table class="table table-striped table-sm">
         <thead>
           <tr>
-            <th> # </th>
-            <th> TDE </th>
-            <th> Unidad </th>
-            <th> Largo </th>
-            <th> Ancho </th>
-            <th> Alto </th>
-            <th> F.Aire </th>
-            <th> Peso </th>
-            <th> OK </th>
-            <th> Observacion </th>
-            <th> Volumen </th>
-            <th> Densidad </th>
-            <th> Comentario </th>
-            <th> Lote </th>
-            
+            <th class="text-center" scope="col">Bloques Normales</th>
+            <th class="text-center" scope="col">Bloques OK</th>
+            <th class="text-center" scope="col">Bloque NG</th>
+            <th class="text-center" scope="col">Bloques Cambio</th>
+            <th class="text-center" scope="col">Densidad Promedio</th>
+            <th class="text-center" scope="col">Metros Planeados</th>
+            <th class="text-center" scope="col">Metros Producidos</th>
+            <th class="text-center" scope="col">Peso Producido</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="text-center">{{resumen.bloques_normales}}</td>
+            <td class="text-center">{{resumen.bloques_ok}}</td>
+            <td class="text-center">{{resumen.bloques_ng}}</td>
+            <td class="text-center">{{resumen.bloques_cambio}}</td>
+            <td class="text-center">{{resumen.densidad_promedio|floatformat:2 }}</td>
+            <td class="text-center">{{resumen.metros_planeados}}</td>
+            <td class="text-center">{{resumen.metros_producidos}}</td>
+            <td class="text-center">{{resumen.peso_producido}}</td>
+          </tr>
+
+<table class="table table-striped table-sm">
+        <thead>
+          <tr>
+            <th class="text-center"> # </th>
+            <th class="text-center"> TDE </th>
+            <th class="text-center"> Unidad </th>
+            <th class="text-center"> Largo </th>
+            <th class="text-center"> Ancho </th>
+            <th class="text-center"> Alto </th>
+            <th class="text-center"> F.Aire </th>
+            <th class="text-center"> Peso </th>
+            <th class="text-center"> OK </th>
+            <th class="text-center"> Observacion </th>
+            <th class="text-center"> Volumen </th>
+            <th class="text-center"> Densidad </th>
+            <th class="text-center"> Comentario </th>
+            <th class="text-center"> Lote </th>
           </tr>
         </thead>
         <tbody>
           <tr>
         {%for bloque_producido  in bloques_producidos %}
-            
-            <td>{{bloque_producido.no_de_bloque}}</td>
-            <td>{{bloque_producido.elemento_corrida.bloqueMedidas.tipo_de_espuma}}</td>
-            <td>{{bloque_producido.elemento_corrida.bloqueMedidas.tipo_de_unidad}}</td>
-            <td>{{bloque_producido.largo_caliente}}</td>
-            <td>{{bloque_producido.ancho_caliente}}</td>
-            <td>{{bloque_producido.alto_caliente}}</td>
-            <td>{{bloque_producido.flujo_de_aire_caliente}}</td>
-            <td>{{bloque_producido.peso_caliente}}</td>
-            <td>{{bloque_producido.revision_calidad}}</td>
-            <td>{{bloque_producido.get_defecto_display}}</td>
-            <td>{{bloque_producido.volumen}}</td>
-            <td>{{bloque_producido.densidad}}</td>
-            <td>{{bloque_producido.comentario}}</td>
-            <td>{{bloque_producido.lote}}</td>
-
+            <td class="text-center" >{{bloque_producido.no_de_bloque}}</td>
+            <td class="text-center" >{{bloque_producido.elemento_corrida.bloqueMedidas.tipo_de_espuma}}</td>
+            <td class="text-center" >{{bloque_producido.elemento_corrida.bloqueMedidas.tipo_de_unidad}}</td>
+            <td class="text-center" >{{bloque_producido.largo_caliente}}</td>
+            <td class="text-center" >{{bloque_producido.ancho_caliente}}</td>
+            <td class="text-center" >{{bloque_producido.alto_caliente}}</td>
+            <td class="text-center" >{{bloque_producido.flujo_de_aire_caliente}}</td>
+            <td class="text-center" >{{bloque_producido.peso_caliente}}</td>
+            <td class="text-center" >{{bloque_producido.revision_calidad}}</td>
+            <td class="text-center" >{{bloque_producido.get_defecto_display}}</td>
+            <td class="text-center" >{{bloque_producido.volumen}}</td>
+            <td class="text-center" >{{bloque_producido.densidad}}</td>
+            <td class="text-center" >{{bloque_producido.comentario}}</td>
+            <td class="text-center" >{{bloque_producido.lote}}</td>
           </tr>
           
           {%endfor%} 
