--- a/corrida/templates/ordenes/inventario.html
+++ b/corrida/templates/ordenes/inventario.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
  
-
+<br>
 <br>
 <div class="container">
         <div class="row">
             <div class="col-6 offset-3 ">
-<h1>
-    Inventario
-</h1>
+                    <h1 class="text-center my_title text-primary" ><b>  Inventario </h1>  </b>
+<br>
             </div>
         </div>
 </div>
-<br>
+
 
 
 <div class="container">
@@ -22,24 +21,24 @@
     
 
     {% for tipo_con_medidas in tipos_con_medidas %} 
-
-    <h3>Bloques disponibles para el TDE: <span class="badge badge-primary badge-pill">{{tipo_con_medidas.tipo_de_espuma}} </span> </h3>
+<br>
+    <h3 class="text-center my_title text-secondary">Bloques disponibles para el TDE: <span class="badge badge-primary badge-pill">{{tipo_con_medidas.tipo_de_espuma}} </span> </h3>
     <table class="table table-striped table-sm" style="padding: 5rem">
             <thead>
             <tr>
                 
-                <th> Medidas</th>
+                <th class="text-center"> Medidas</th>
             
-                <th> Bloques Disponibles</th>
+                <th class="text-center"> Bloques Disponibles</th>
             </tr>
             </thead>
             <tbody>
                 {% for medida_con_count in tipo_con_medidas.medidas_con_count %}
                 <tr>
                 
-                    <td> {{medida_con_count.medida.descripcion}} </td>
+                    <td class="text-center"> {{medida_con_count.medida.descripcion}} </td>
                     
-                    <td> <b> {{medida_con_count.bloques_producidos_count}}</b> </td>
+                    <td class="text-center"> <b> {{medida_con_count.bloques_producidos_count}}</b> </td>
                         
                 </tr> 
                     {% endfor %}
@@ -48,6 +47,7 @@
             
             </tbody>
     </table>
+<br>
     {% endfor %}
         </div>
     </div>  
