cambios grandes en models, cambios en templates y admin

--- a/corrida/templates/bloques/bloques_disponibles.html
+++ b/corrida/templates/bloques/bloques_disponibles.html
@@ -63,7 +63,7 @@ $(document).ready(function() {
             <tr>
                 <td>{{bloques.elemento_corrida.bloqueMedidas}} </td>
                 <td > <b> {{bloques.elemento_corrida.bloqueMedidas.tipo_de_espuma}} </b></td>
-                <td>{{bloques.lote}} </td>
+                <td>{{bloques.id}} </td>
                 <td>{{bloques.largo_caliente}} </td>
                 <td>{{bloques.ancho_caliente}} </td>
                 <td>{{bloques.alto_caliente}} </td>
