--- a/espumas/templates/espumas/medidas/detallemedidas.html
+++ b/espumas/templates/espumas/medidas/detallemedidas.html
@@ -61,7 +61,7 @@
                 <td>{{ itemsFront.ancho_frio_objetivo }}</td>
                 <td>{{ itemsFront.alto_frio_objetivo }}</td>
         
-                <td>{{ itemsFront.flujo_de_aire_objetivo }}</td>
+                <td>{{ itemsFront.id }}</td>
         
                 <td>{{ itemsFront.largo_caliente_setting_predefinido }}</td>
                 <td>{{ itemsFront.ancho_caliente_setting_predefinido }}</td>
