--- a/espumas/templates/espumas/tde/detalletde.html
+++ b/espumas/templates/espumas/tde/detalletde.html
@@ -65,8 +65,8 @@
         <td>{{ itemsFront.densidad_objetivo_maxima }}</td>
         <td>{{ itemsFront.dureza_objetivo_minima }}</td>
         <td>{{ itemsFront.dureza_objetivo_maxima }}</td>
-        <td>{{ itemsFront.Flujo_de_aire_minimo }}</td>
-        <td>{{ itemsFront.flujo_de_aire_maximo }}</td>
+        <td>{{ itemsFront.id }}</td>
+        <td>{{ itemsFront.id }}</td>
 
 
         <td>{{ itemsFront.retardante_flama }}</td>
