--- a/corrida/templates/ordenes/corrida_producida.html
+++ b/corrida/templates/ordenes/corrida_producida.html
@@ -65,7 +65,7 @@ Resumen de Orden </h2></b>
             <td class="text-center" >{{bloque_producido.volumen}}</td>
             <td class="text-center" >{{bloque_producido.densidad}}</td>
             <td class="text-center" >{{bloque_producido.comentario}}</td>
-            <td class="text-center" >{{bloque_producido.lote}}</td>
+            <td class="text-center" >{{bloque_producido.id}}</td>
           </tr>
           
           {%endfor%} 
