--- a/corrida/templates/ordenes/produccion.html
+++ b/corrida/templates/ordenes/produccion.html
@@ -87,7 +87,7 @@
                                     <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.largo_caliente_setting_predefinido}}</span></td>
             
                                     <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.alto_caliente_setting_predefinido}}</span></td>
-                                    <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.flujo_de_aire_objetivo}}</span></td>
+                                    <td><span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.id}}</span></td>
                                     
                                     <td>{{ elemento.bloqueMedidas.uso_objetivo }}</td>
                                     
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-12 offset-0">
                     <p><b>Bloques Producidos de: <font color="green"> {{elementoCorrida.bloqueMedidas.tipo_de_espuma}}</font>
-                            {% with lote=bloquesProducidos.0.lote %} 
+                            {% with lote=bloquesProducidos.0.id %} 
                     Numero de Lote: <font color="blue">{{lote}}</font> </p></b>
                     {% endwith %}
                 </div>
@@ -273,7 +273,7 @@
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                 F.Aire:
-                          <span class="badge badge-primary badge-pill">{{elementoCorrida.bloqueMedidas.flujo_de_aire_objetivo}}</span>
+                          <span class="badge badge-primary badge-pill"></span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                 Uso:
